# HealthMoney

./: README.md  plano.html  pyproject.toml
app/: __init__.py
app/extend/: bradesco.py
arquivo/: Bradesco_11032024_084106.xls
flaskr/: auth.py
