[project]
name = "healthmoney"
version = "1.0.0"
description = "Um aplicativo de apoio para organização financeira."
dependencies = [
    "flask",
    ]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpath = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]
